...
        
        setUpViews()
    }
    
    let leaderboardLabel: UILabel = {
        let label = UILabel()
        label.add(text: "Leaderboards", font: UIFont(boldWithSize: 33), textColor: .white)
        label.textAlignment = .left
        label.numberOfLines = 1
        return label
    }()
    
    let userNameLabel: UILabel = {
...
        label.numberOfLines = 1
        return label
    }()
    
    let tempSarcasticLabel: UILabel = {
        let label = UILabel()
        label.add(text: "Money talks but yours just says good-bye", font: UIFont(regularWithSize: 20), textColor: UIColor(hex: "686B75"))
        label.textAlignment = .center
        return label
    }()
    
    func setUpViews() {
        
...
