...
        
        // Initialize each tab bar view controller
        
        let controllersCustomer = [add(vc: HomeVC(), name: "Home", icon: UIImage(named: "home_icon")!),
                                   add(vc: SearchVC(), name: "Search", icon: UIImage(named: "search_icon")!),
                                   //UIViewController(),
                                   add(vc: SocialVC(), name: "Social", icon: UIImage(named: "social_icon")!),
                                   add(vc: AccountVC(), name: "Account", icon: UIImage(named: "account_icon")!)]
        // Add all view controllers
        self.viewControllers = controllersCustomer
        self.selectedIndex = 0
        
        self.tabBar.layer.masksToBounds = true
...
